<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp">

    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:visibility="gone"/>

    <ImageView
        android:id="@+id/img_poster"
        android:layout_width="150dp"
        android:layout_height="180dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginEnd="16dp"
        android:src="@color/teal_200"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:contentDescription="@string/detail_image" />

    <TextView
        android:id="@+id/detail_title"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:lines="2"
        android:maxLines="2"
        android:text="@string/title"
        android:textAlignment="center"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@id/img_poster"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/detail_status"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/status"
        android:textSize="14sp"
        android:textStyle="bold"
        android:layout_marginTop="16dp"
        app:layout_constraintStart_toEndOf="@id/img_poster"
        app:layout_constraintTop_toBottomOf="@id/detail_title"
        />

    <TextView
        android:id="@+id/tv_detail_status_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/value_status"
        android:layout_marginStart="8dp"
        app:layout_constraintStart_toEndOf="@id/detail_status"
        app:layout_constraintBottom_toBottomOf="@id/detail_status"/>

    <TextView
        android:id="@+id/detail_release_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/release_date"
        android:textSize="14sp"
        android:textStyle="bold"
        android:layout_marginTop="16dp"
        app:layout_constraintStart_toEndOf="@id/img_poster"
        app:layout_constraintTop_toBottomOf="@id/detail_status"
        />

    <TextView
        android:id="@+id/tv_detail_release_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/value_release"
        android:layout_marginStart="8dp"
        app:layout_constraintStart_toEndOf="@id/detail_release_date"
        app:layout_constraintBottom_toBottomOf="@id/detail_release_date"/>

    <TextView
        android:id="@+id/detail_tag_line"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tagline"
        android:textSize="14sp"
        android:textStyle="bold"
        android:layout_marginTop="16dp"
        app:layout_constraintStart_toEndOf="@id/img_poster"
        app:layout_constraintTop_toBottomOf="@id/detail_release_date"
        />

    <TextView
        android:id="@+id/tv_detail_tagline_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/value_tagline"
        android:layout_marginStart="8dp"
        app:layout_constraintStart_toEndOf="@id/detail_tag_line"
        app:layout_constraintBottom_toBottomOf="@id/detail_tag_line"/>

    <TextView
        android:id="@+id/detail_overview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/overview"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@id/img_poster"
        app:layout_constraintStart_toStartOf="parent"
        android:textSize="16sp"
        android:textStyle="bold"/>

    <TextView
        android:id="@+id/tv_detail_overview_value"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/value_overview"
        android:layout_marginTop="8dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/detail_overview"/>
</androidx.constraintlayout.widget.ConstraintLayout>